--- a/convex.html
+++ b/convex.html
@@ -5,7 +5,7 @@
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
-        <title>Square</title>
+        <title>Andrew Petriccione Assignment 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- this script tells the gpu the colors via the 'shader'-->
