--- a/changes/changes3.html
+++ b/changes/changes3.html
@@ -4,8 +4,8 @@
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
-        <!--<meta http-equiv="refresh" content="2"> -->
-
+        <!--<meta http-equiv="refresh" content="3">-->
+        <meta http-equiv="refresh" content="2">
         <title>Changes</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
