--- a/polyhedron/index.html
+++ b/polyhedron/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
    Author:  Edward Angel
-   Modified by: Marietta E. Cameron
+   Modified by: Andrew Petriccione, Marietta E. Cameron
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
         
-        <title>Andrew's Shape example</title>
+        <title>Andrew's Diamond</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script id="vertex-shader" type="x-shader/x-vertex">
@@ -70,9 +70,10 @@ main()
     </head>
     <body onload="canvasMain()">
         <div>
-            <h1>Andrew's Shape Example</h1>
+            <p>Andrew's</p> 
+            <h1>Diamond</h1>
             <canvas id="gl-canvas" width="512" height="512" >
-                oops ... your browser doesn't support the HTML5 canvas element
+                  oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
         <div>
