--- a/index copy.html
+++ b/index copy.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
    Author:  Edward Angel
-   Modified by: Andrew Petriccione, Marietta E. Cameron
+   Modified by: Marietta E. Cameron
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
         
-        <title>Andrew's Diamond</title>
+        <title>Dr. Mec's Color Cube Example</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script id="vertex-shader" type="x-shader/x-vertex">
@@ -64,16 +64,15 @@ main()
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/initShaders.js"></script>
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/MV.js"></script>
         
-        <script type="text/javascript" src="myCube.js"></script>
+        <script type="text/javascript" src="cube.js"></script>
 
 
     </head>
     <body onload="canvasMain()">
         <div>
-            <p>Andrew's</p> 
-            <h1>Diamond</h1>
+            <h1>Dr. Mec's Color Cube Example</h1>
             <canvas id="gl-canvas" width="512" height="512" >
-                  oops ... your browser doesn't support the HTML5 canvas element
+                oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
         <div>
