--- a/modified.html
+++ b/modified.html
@@ -1,18 +1,19 @@
+
 <!DOCTYPE html>
 <!--
    Author:  Edward Angel
-   Modified by: Andrew Petriccione, Marietta E. Cameron
+   Modified by: Marietta E. Cameron, David Cable 
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
         
-        <title>Andrew's Diamond</title>
+        <title>Assignment 4</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script id="vertex-shader" type="x-shader/x-vertex">
 
 attribute  vec4 vPosition;
-attribute  vec4 vColor;
+attribute  vec4 vColor; 
 varying vec4 fColor;
 
 uniform vec3 theta;
@@ -27,13 +28,13 @@ void main()
 
     // Remeber: thse matrices are column-major
     mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
-		    0.0,  c.x,  s.x, 0.0,
-		    0.0, -s.x,  c.x, 0.0,
+		    0.0,  c.x,  -s.x, 0.0,
+		    0.0, s.x,  c.x, 0.0,
 		    0.0,  0.0,  0.0, 1.0 );
 
-    mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
+    mat4 ry = mat4( c.y, 0.0, s.y, 0.0,
 		    0.0, 1.0,  0.0, 0.0,
-		    s.y, 0.0,  c.y, 0.0,
+		    -s.y, 0.0,  c.y, 0.0,
 		    0.0, 0.0,  0.0, 1.0 );
 
 
@@ -64,16 +65,15 @@ main()
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/initShaders.js"></script>
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/MV.js"></script>
         
-        <script type="text/javascript" src="myCube.js"></script>
+        <script type="text/javascript" src="polyhedron.js"></script>
 
 
     </head>
     <body onload="canvasMain()">
         <div>
-            <p>Andrew's</p> 
-            <h1>Diamond</h1>
+            <h3>David's Polyhedron</h3> 
             <canvas id="gl-canvas" width="512" height="512" >
-                  oops ... your browser doesn't support the HTML5 canvas element
+                oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
         <div>
