--- a/3dSierpinski/3dSierpinski.html
+++ b/3dSierpinski/3dSierpinski.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-<title>3D Sierpinski, By Andrew Petriccione</title>
-
+<title>3D Sierpinski, Andrew Petriccione</title>
+<!-- original code by Edward Angel and Marietta Cameron -->
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 attribute vec4 vPosition;
@@ -58,11 +58,11 @@ main()
 </head>   
 
 <body>
-<div>
+<!--<div>
 recursive steps  0 <input id="slider" type="range"
  min="0" max="6" step="1" value="0" />
  6
-</div>
+</div>-->
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
